# albert-plugin-python-zed-workspaces

./: .gitignore  README.md  __init__.py  pyproject.toml
